--- a/src/styles/layout/blocks/avatar.pcss
+++ b/src/styles/layout/blocks/avatar.pcss
@@ -1,4 +1,18 @@
 .avatar {
+    width: 200px;
+    height: 200px;
+    position: relative;
     border-radius: 50%;
     overflow: hidden;
+    margin-bottom: 75px;
+}
+
+.avatar__img {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
