--- a/src/styles/layout/blocks/scroll.pcss
+++ b/src/styles/layout/blocks/scroll.pcss
@@ -1,21 +1,21 @@
 .hero__bottom-btn {
     display: block;
-    font-size: 18px;
-    color: rgb(255, 255, 255);
+    position: absolute;
+    top: 90%;
     left: 50%;
-    transform: translateX(-50%);
 }
 .scroll-down-btn {
+    display: inline-block;
     text-decoration: none;
-    margin: 0;
+    font-size: 18px;
+    color: rgb(255, 255, 255);
+    vertical-align: middle;
 }
 .scroll-down-icon {
-    display: block;
-    width: 20px;
-    height: 30px;
+    display: inline-block;
 }
 .scroll__img {
-    height: 100%;
-    width: 100%;
+    width: 22px;
+    height: 30px;
     filter: invert(100%);
 }
