--- a/src/index.pug
+++ b/src/index.pug
@@ -46,25 +46,21 @@ html(lang="en")
                   .avatar
                     +image("content/user.jpg", "avatar__img")
                   .user-info__content
-                    - 
-                      var userdata = [
-                        ["Проживаю:", "Новосибирск"],
-                        ["Возраст:", "27 лет"],
-                        ["Родился:", "1 января 1991"]
-                      ];
-                    table().user-info__data
-                      tbody.user-info__data-body
-                        each row in userdata
-                          tr
-                            td #{row[0]}
-                            td #{row[1]}
-                            td #{row[2]}
+                    table(cellpadding="10" cellspacing="1").user-info__data
+                      tr
+                        th Проживаю:
+                        td  Новосибирск
+                      tr
+                        th Возраст:
+                        td 27 лет
+                      tr
+                        th Родился:
+                        td 1 января 1991
             .about__content
               .about__disclamer Привет, меня зовут
               h2.about__title Владимир Астаханов
-              .about__desc
-                p Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
-                p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+              .about__desc Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
+              .about__expl Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
       section.values-section
         .values__content-img
           +image("content/hands.png", "content-img")
@@ -152,20 +148,19 @@ html(lang="en")
             .feedback-form__btn-send
               input(type="button").btn-send
       footer.footer
-        .footer-container__content-section-one
-          .content__date &#169; 2020	
-          .content__user Владимир<br> Астаханов
-          .content__menu 
+        .footer-container
+          .footer__date &#169; 2020	
+          .footer__user Владимир<br>Астаханов
+          .footer__menu 
             nav.menu
                   - var items = ["Главная", "Обо мне", "Навыки", "Работы", "Отзывы", "Связаться"]
                   ul.menu__list
                     each item in items
                       li.menu__item
                         a(href="").menu__link #{item}
-        .footer-container__content-section-two
-          .content__desc Личный сайт<br> веб-разработчика
-          .content__links
-            .links__desc
+          .footer__text Личный сайт<br>веб-разработчика
+          .footer__desc Этот сайт я сделал в рамках обучения в<br>Школе онлайн образования Loftschool
+          .footer__links
             .links__socials
               - var icons = ["Inst", "Vk", "Github"]
                 ul.socials
@@ -173,7 +168,6 @@ html(lang="en")
                     li.socials-item
                       a(href="").socials__link
                         +icon(item, "socials__icon")
-          .content__message
-            p Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
-            p Martin Golding
+          .footer__message Всегда пишите код так,<br>будто сопровождать его будет склонный к насилию<br>психопат, который знает где вы живете
+          .footer__autor Martin Golding
 
