--- a/src/styles/layout/blocks/table-user-info.pcss
+++ b/src/styles/layout/blocks/table-user-info.pcss
@@ -1,12 +1,15 @@
 
 .user-info__data {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     font-size: 16px;
+    text-align: left;
+}
+th {
+    color: rgba(255, 255, 255, 0.149);
+    font-weight: bold;
+    padding-right: 50px;
 }
 td {
-    padding-top: 25px;
-    padding-bottom: 25px;
-    padding-right: 80px; 
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    white-space: nowrap;  
 }
